--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Arial", sans-serif;
-  background-color: #fff;
+  background-color: var(--light-grey-bg);
 }
 
 img {
@@ -130,7 +130,7 @@ img {
   padding: 40px 24px;
   text-align: center;
   transform: translateY(-1200px);
-  background: linear-gradient(0deg, rgba(254, 252, 247, 0.504981) 0%, #FEFCF7 55.94%);
+  background-image: linear-gradient(0deg, rgba(254, 252, 247, 0.504981) 0%, #FEFCF7 55.94%);
   font-family: var(--secondary-font);
   transition: transform 0.6s ease;
 }
