--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,34 @@ img {
 }
 
 
+/* REUSABLE */
+.btn {
+  display: inline-block;
+  padding: 15px 30px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-family: var(--secondary-font);
+  transition: background-color 0.3s ease, opacity 0.3s ease;
+}
+
+.btn--primary {
+  background-color: var(--dark-cyan);
+  color: var(--light-grey-bg);
+}
+
+.btn--primary:hover {
+  background-color: #66D2CF;
+}
+
+.btn--primary:active {
+  opacity: 0.6;
+}
+
+.btn--disabled {
+  background-color: #E2DEDB;
+}
+
+
 /* CONTAINER */
 .container {
   width: 100%;
@@ -103,6 +131,16 @@ img {
 .logo {
   display: inline-block;
   text-decoration: none;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+}
+
+.logo:hover{
+  opacity: 0.8;
+}
+
+.logo:active{
+  opacity: 0.6;
 }
 
 .logo__img {
@@ -133,10 +171,12 @@ img {
   background-image: linear-gradient(0deg, rgba(254, 252, 247, 0.504981) 0%, #FEFCF7 55.94%);
   font-family: var(--secondary-font);
   transition: transform 0.6s ease;
+  overflow: auto;
 }
 
 .site-header--open .site-header__toggler {
   background-image: url("../img/cancel-nav-icon.svg");
+  background-repeat: no-repeat;
 }
 
 .site-header--open .sitenav {
@@ -157,6 +197,435 @@ img {
   text-decoration: none;
   text-transform: capitalize;
   color: var(--dark-grey-blue);
+  transition: color 0.3s ease, opacity 0.3s ease;
+}
+
+.sitenav__link:hover{
+  color: var(--dark-grey-blue);
+}
+
+.sitenav__link:active{
+  opacity: 0.6;
+}
+
+/* SITE-CONTENT */
+.site-content {}
+
+
+
+/* HERO */
+.hero {
+  padding: 100px 24px;
+  background-image: url("../img/mobile-hero-bg.jpg");
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  color: white;
+}
+
+.hero__inner {
+  width: 100%;
+  text-align: center;
+}
+
+.hero__heading {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-weight: 900;
+  font-size: 35px;
+  line-height: 40px;
+  color: var(--light-grey-bg);
+  font-family: var(--secondary-font);
+}
+
+.hero__info {
+  margin-bottom: 40px;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--light-grey-bg);
+  opacity: 0.8;
+}
+
+.hero__info{
+  margin-top: 0;
+  margin-bottom: 24px;
 }
 
 
+/* COLLECTION */
+
+.collection{
+ padding-top: 120px;
+ padding-bottom: 120px;
+}
+
+.collection__heading{
+  margin-top: 0;
+  margin-bottom: 13px;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 72px;
+  text-align: center;
+  color: var(--grey);
+  background-image: linear-gradient(180deg, rgba(254, 252, 247, 0.0001) 0%, #FEFCF7 100%);
+  background-color: #83888f;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+
+}
+
+.collection__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.collection__item {
+  width: 282px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.collection__item:not(:last-child){
+  margin-bottom: 48px;
+}
+
+.coffee__img{
+  margin-bottom: 24px;
+}
+
+.coffee__heading {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-family: var(--secondary-font);
+  color: var(--dark-grey-blue);
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.coffee__info {
+  margin:0;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 25px;
+}
+
+
+@media only screen and (min-width: 768px){
+  /* TABLET */
+  .container{
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  /* SITE-HEADER */
+
+  .site-header {
+    position: relative;
+    padding-top: 40px;
+    padding-bottom: 53px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+
+
+  .logo {
+    display: inline-block;
+    text-decoration: none;
+  }
+
+  .logo__img {
+    display: block;
+    width: 236px;
+    height: 26px;
+  }
+
+  .site-header__toggler {
+    display: none;
+
+  }
+
+  .sitenav {
+    position: static;
+    display: flex;
+    align-items: center;
+    top: 0%;
+    left: 0;
+    right: 0;
+    padding: 0;
+    height: auto;
+    text-align: center;
+    transform: translateY(0px);
+    background-image: linear-gradient(0deg, rgba(254, 252, 247, 0.504981) 0%, #FEFCF7 55.94%);
+    font-family: var(--main-font);
+    transition: transform 0s ease;
+    overflow: visible;
+  }
+
+  .sitenav__list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  .sitenav__item:not(:last-child) {
+    margin-bottom: 0px;
+    margin-right: 33px;
+  }
+
+  .sitenav__link {
+    text-decoration: none;
+    text-transform: capitalize;
+    color: var(--grey);
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.9px;
+    text-transform: uppercase;
+  }
+
+  /* TABLET HERO  */
+  .hero {
+    padding: 104px 58px;
+    background-image: url("../img/hero-bg-tablet.jpg");
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    color: white;
+  }
+
+  .hero__inner {
+    width: 400px;
+    text-align: left;
+  }
+
+  .hero__heading {
+    margin-top: 0;
+    width:  330px;
+    margin-bottom: 24px;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 40px;
+    color: var(--light-grey-bg);
+    font-family: var(--secondary-font);
+  }
+
+  .hero__info {
+    margin-bottom: 40px;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 25px;
+    text-align: left;
+    color: var(--light-grey-bg);
+    opacity: 0.8;
+  }
+
+  .hero__info {
+    margin-top: 0;
+    margin-bottom: 24px;
+  }
+
+  /* COLLECTION */
+
+  .collection {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .collection__heading {
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 13px;
+    font-family: var(--secondary-font);
+    font-size: 86px;
+    line-height: 72px;
+    white-space: nowrap;
+    margin-bottom: -30px;
+
+  }
+
+  .collection__list {
+    margin: 0;
+    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+    list-style: none;
+  }
+
+  .collection__item {
+    width: 573px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+  }
+
+  .collection__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  .coffee__inner{}
+
+  .coffee__img {
+    width: 255px;
+    height: 193px;
+    margin-bottom: 0px;
+    margin-right: 36px;
+
+  }
+
+  .coffee__heading {
+    margin-top: 0;
+    margin-bottom: 24px;
+    font-family: var(--secondary-font);
+    color: var(--dark-grey-blue);
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 32px;
+  }
+
+  .coffee__info {
+    margin: 0;
+    font-size: 15px;
+    line-height: 25px;
+  }
+
+
+
+
+}
+
+
+@media only screen and (min-width:1000px){
+  .container{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+   /* DESKTOP HERO  */
+   .hero {
+     padding: 104px 58px;
+     background-image: url("../img/hero-bg.jpg");
+     background-repeat: no-repeat;
+     border-radius: 10px;
+     color: white;
+   }
+
+   .hero__inner {
+     max-width: 400px;
+     text-align: left;
+   }
+
+   .hero__heading {
+     margin-top: 0;
+     width: 330px;
+     margin-bottom: 24px;
+     font-weight: 900;
+     font-size: 40px;
+     line-height: 40px;
+     color: var(--light-grey-bg);
+     font-family: var(--secondary-font);
+   }
+
+   .hero__info {
+     margin-bottom: 40px;
+     font-weight: normal;
+     font-size: 15px;
+     line-height: 25px;
+     text-align: left;
+     color: var(--light-grey-bg);
+     opacity: 0.8;
+   }
+
+   .hero__info {
+     margin-top: 0;
+     margin-bottom: 24px;
+   }
+
+   /* DESKTOP COLLECTION */
+   .collection {
+     padding-top: 120px;
+     padding-bottom: 120px;
+   }
+
+   .collection__heading {
+     width: 100%;
+     margin-top: 0;
+     /* margin-bottom: 13px; */
+     font-family: var(--secondary-font);
+     font-weight: 900;
+     font-size: 150px;
+     line-height: 120px;
+     white-space: nowrap;
+     margin-bottom: -50px;
+
+   }
+
+   .collection__list {
+     margin: 0;
+     /* margin-top: 0px; */
+     padding: 0;
+     margin-left: auto;
+     margin-right: auto;
+     list-style: none;
+     display: flex;
+   }
+
+   .collection__item {
+     width: 255px;
+     margin-left: auto;
+     margin-right: auto;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     text-align: center;
+   }
+
+   .collection__item:not(:last-child) {
+     margin-bottom: 0px;
+     margin-right: 30px;
+   }
+
+   .coffee__inner {}
+
+   .coffee__img {
+     width: 255px;
+     height: 193px;
+     margin-bottom: 70px;
+     margin-right: 0px;
+
+   }
+
+   .coffee__heading {
+     margin-top: 0;
+     margin-bottom: 24px;
+     font-family: var(--secondary-font);
+     color: var(--dark-grey-blue);
+     font-weight: 900;
+     font-size: 24px;
+     line-height: 32px;
+   }
+
+   .coffee__info {
+     margin: 0;
+     font-size: 16px;
+     line-height: 26px;
+   }
+
+
+}
